# buddy-mlir

./: CMakeLists.txt
examples/DIPDialect/: CMakeLists.txt  rotation2D.cpp
frontend/Interfaces/buddy/DIP/: DIP.h
frontend/Interfaces/lib/: CMakeLists.txt  DIP.mlir
midend/include/Dialect/DIP/: DIPOps.td
midend/lib/Conversion/LowerDIP/: LowerDIPPass.cpp
